// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Select Matches snapshot when array prop "items" has one item: "[object Object]" 1`] = `
<ForwardRef
  data-tip=""
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <ForwardRef
      id="searchInput"
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </ForwardRef>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<ForwardRef
  data-tip="jest-auto-snapshots String Fixture"
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={false}
    onClick={[Function]}
    type="primary"
  >
    <ChevronDownIcon
      color="white"
    />
  </ForwardRef>
  <ForwardRef
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <ForwardRef
      id="searchInput"
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </ForwardRef>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "hasIconOnly" is set to: "false" 1`] = `
<ForwardRef
  data-tip=""
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    hasIconOnly={false}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <ForwardRef
      id="searchInput"
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </ForwardRef>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "hasSearch" is set to: "false" 1`] = `
<ForwardRef
  data-tip=""
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSearch={false}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "isOpen" is set to: "false" 1`] = `
<ForwardRef
  data-tip=""
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    hasIconOnly={true}
    isOpen={false}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <ForwardRef
      id="searchInput"
    >
      <SearchIcon />
      <Search
        isOpen={false}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </ForwardRef>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "isSplit" is set to: "false" 1`] = `
<ForwardRef
  data-tip=""
  isSplit={false}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <ForwardRef
      id="searchInput"
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </ForwardRef>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "multiSelect" is set to: "false" 1`] = `
<ForwardRef
  data-tip=""
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <ForwardRef
      id="searchInput"
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </ForwardRef>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={false}
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "shortcutsEnabled" is set to: "false" 1`] = `
<ForwardRef
  data-tip=""
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <ForwardRef
      id="searchInput"
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </ForwardRef>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when passed all props 1`] = `
<ForwardRef
  data-tip=""
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    disabled={true}
    type="primary"
  >
    <ChevronDownIcon
      color="grayDark"
    />
  </ForwardRef>
  <ForwardRef
    hasIconOnly={true}
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    position="top"
  >
    <ForwardRef
      id="searchInput"
    >
      <SearchIcon />
      <Search
        isOpen={true}
        onChange={[Function]}
        placeholder="jest-auto-snapshots String Fixture"
      />
    </ForwardRef>
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSearch={true}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when passed only required props 1`] = `
<ForwardRef
  isSplit={false}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <Button
    disabled={false}
    fullWidth={false}
    hasIconOnly={false}
    innerRef={[Function]}
    isSelect={true}
    items={
      Array [
        Object {
          "id": "jest-auto-snapshots String Fixture",
          "title": "jest-auto-snapshots String Fixture",
        },
      ]
    }
    label=""
    loading={false}
    onClick={[Function]}
    selectPosition="bottom"
    size="medium"
    type="secondary"
  />
  <ForwardRef
    hasIconOnly={false}
    isOpen={null}
    position="bottom"
  >
    <ForwardRef>
      <SelectItem
        getItemId={[Function]}
        hasSearch={false}
        hasSelectedItems={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;
